# intv-comp

./: .env.example  .gitignore  .gitmessage  CONTRIBUTING.md  README.md  Taskfile.yml  main.py  pyproject.toml
.github/: CODE_REVIEW_GUIDELINES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs.md  feature_request.yml  perf.md  refactor.md  style.md  task.md
data/convert/: bill-of-lading_interview_sessions.json
data/raw/: bill-of-lading_interview_sessions.csv  bill-of-lading_messages.csv
data/references/: README.md  external_info_reference_template.md  sample.md
docs/: MESSAGE_FILTERING.md  external_link_citation.md  quickstart_policy_mode.md
scripts/: analyze_interviews.py  llm_client.py
src/intv_comp/: converter.py  logger.py  main.py
src/intv_comp/analyze/: __init__.py  analyze_interviews.py  external_sources_loader.py  llm_client.py  message_filter.py  reference_loader.py
