[project]
name = "intv-comp"
version = "0.1.0"
description = "インタビューコンペティション用のプロジェクト"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "commitizen>=4.10.0",
    "loguru>=0.7.0",
    "openai>=1.42.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "tiktoken>=0.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "pandas-stubs>=2.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.ruff]
# チェック対象のPythonバージョン
target-version = "py314"

# 最大行長
line-length = 100

# src 配下だけを対象
src = ["src"]

[tool.mypy]
# Pythonのバージョンを明示
python_version = "3.14"

# srcをルートとして認識させる
mypy_path = "src"

# より厳格な型チェックを有効
strict = true

# サードパーティライブラリが型情報を持たないとき無視
ignore_missing_imports = true

# Exceptionをキャッチすることに対する警告を無効化
